[metadata]
name = mqtt2msg
version = 0.0.1
summary = MQTT based tool for monitoring and publishing messages
author = Flavio Fernandes
home-page = https://flaviof.com
classifier =
    Environment :: mqtt2msg
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3

[files]
packages =
    mqtt2msg

[wheel]
universal = 1
